# fresh

./: .clang-format  .editorconfig  .gitattributes  .gitignore  ACTUAL_STATUS.md  ADVANCED_WORLD_GENERATION.md  ARCHITECTURE.md  ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  ARCHIVED.md  ASSET_MANAGEMENT_ARCHITECTURE.md  ASSET_MANAGEMENT_GUIDE.md  ASSET_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  ASSET_MANAGEMENT_QUICKREF.md  ASSET_PACK_GUIDE.md  AUDIO_IMPLEMENTATION_SUMMARY.md  AUTOMATED_BUILD.md  AUTOMATED_BUILD_QUICKREF.md  BATCH_INSTALLER_GUIDE.md  BIOME_SYSTEM_IMPLEMENTATION.md  BUILD.md  BUILD_VERIFICATION.md  CHANGELOG.md  CMAKE_TROUBLESHOOTING.md  CMakeLists.txt  CMakePresets.json  COMPILATION_ERRORS_FIXED.md  COMPLETE_STATUS.md  COMPREHENSIVE_ROADMAP.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONTRIBUTING.md  CONTROLS.md  CORE_SYSTEMS_GUIDE.md  CRITICAL_SYSTEMS_VERIFICATION.md  CROSS_PLATFORM_BUILD.md  CURRENT_STATUS.md  DARKER_BLUE_SCREEN_FIX.md  DARK_THEME_IMPLEMENTATION.md  DARK_THEME_VISUAL_MOCKUP.md  DEVELOPER_QUICKREF.md  DEVELOPER_SETUP.md  (+147 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: README.md  ci.yml  ci.yml.disabled  ci.yml.disabled.old  cleanup-branches.yml  coverage.yml  quality.yml  release.yml
Assets/: asset_config.lua
_codeql_build_dir/: FreshVoxelEngine  compile_commands.json
_codeql_build_dir/shaders/: voxel.vert
archived/imgui-panels/: EngineConfigPanel.cpp  EngineConfigPanel.h  MainMenuPanel.cpp  MainMenuPanel.h  SettingsPanel.cpp  WindowsCustomizationPanel.cpp
asset_packs/: .gitignore  DIRECTORY_STRUCTURE.md  QUICK_REFERENCE.md  README.md  create_pack.sh
asset_packs/example_pack/: README.md  voxel_materials.json
build_test/: CMakeLists.txt  FreshVoxelEngineTests
config/: character_stats.json  weapon_stats.json
docs/: 2D_ENGINE_SYSTEMS.md  ADVANCED_FEATURES.md  ADVANCED_TERRAIN_GENERATION.md  AUDIO_SYSTEM.md  CPP_GUIDELINES.md  DEVELOPMENT_TOOLS.md  EDITOR_IMPLEMENTATION_SUMMARY.md  EDITOR_INTEGRATION.md  ENHANCED_GALAXY_GENERATION.md  IMGUI_DIRECTX_INTEGRATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY_CRITICAL_IMPROVEMENTS.md  INPUT_SYSTEM.md  INPUT_SYSTEM_VISUAL.md  LOGGING.md  LUA_SOL2_INTEGRATION.md  OPTIMIZATIONS.md  PHASE_7_CHARACTER_SYSTEM.md  PROCEDURAL_CHARACTER_SYSTEM.md  PROJECT_ROADMAP.md  PYTHON_BINDINGS.md  README.md  REFLECTION_SYSTEM.md  TERRAFORMING.md  VCPKG_MANIFEST_MODE.md  WORK_SESSION_SUMMARY_2025-11-08.md  vcpkg-setup-visual.md
docs/api/: README.md
docs/architecture/: ARCHITECTURE_DIAGRAM.md  COMPONENT_BASED_ARCHITECTURE.md  DATA_DRIVEN_DESIGN.md  DOTNET_INTEGRATION.md  EDITOR_RUNTIME_SEPARATION.md  EVENT_DRIVEN_ARCHITECTURE.md  PLUGIN_SYSTEM.md  PROJECT_IMPLEMENTATION_SUMMARY.md  PROJECT_WORKFLOW.md  README.md  SCENE_MANAGEMENT.md  UI_ARCHITECTURE.md  WINDOWS_INTEGRATION.md
docs/community/: CODE_OF_CONDUCT.md  CONTRIBUTORS.md  FAQ.md
docs/editor/: CAMERA_CONTROLLER.md  DIALOGUE_EDITOR_IMPLEMENTATION_SUMMARY.md  EDITOR_FEATURES_STATUS.md  EDITOR_SETTINGS_DIALOG.md  GUI_GUIDE.md  LAYOUT_COMPARISON.md  LAYOUT_DIAGRAM.txt  LAYOUT_MANAGEMENT.md  NATIVE_MENU_BAR_INTEGRATION.md  NATIVE_TOOLBAR_INTEGRATION.md  TRANSFORM_GIZMO_INTEGRATION_VISUAL_GUIDE.md
docs/getting-started/: AUTOMATED_BUILD.md  BUILD.md  ROADMAP_PACKAGE_README.md
docs/guides/: ADVANCED_MESH_GENERATION.md  AUDIO_FORMAT_SUPPORT.md  BLOCK_STRETCHING.md  CONTROLS.md  DAY_NIGHT_CYCLE.md  DAY_NIGHT_CYCLE_GUIDE.md  HEIGHTMAP_GENERATION_GUIDE.md  HOT_RELOAD_USAGE.md  INPUT_SYSTEM_TROUBLESHOOTING.md  ITERATIVE_DEVELOPMENT.md  LUA_ACTIVATION_GUIDE.md  LUA_API_REFERENCE.md  LUA_ECS_API.md  LUA_INTEGRATION_GUIDE.md  LUA_SCRIPTING_INTEGRATION.md  PLUGIN_DEVELOPMENT.md  RESOURCE_LOADING.md  SCENE_SERIALIZATION.md  TESTING_BEST_PRACTICES.md  UNREAL_ENGINE_COMPARISON.md  UNREAL_ENGINE_INSPIRED_WORKFLOW.md  VOXEL_CHARACTER_GUIDE.md  VOXEL_TEXTURE_SWAPPING.md  VOXEL_TOOLS.md  WORLD_TYPE_SELECTION.md
docs/history/: BUG_FIX_VOID_WORLD_RENDERING.md  CAMERA_CONTROLLER_IMPLEMENTATION_SUMMARY.md  CAMERA_TOGGLE_GUI_READABILITY_FIX.md  DAY_NIGHT_CYCLE_COMPLETION_SUMMARY.md  DEVELOPMENT_NEXT_STEPS_COMPLETION_SUMMARY.md  DOCUMENTATION_REWORK_SUMMARY.md  EDITOR_FIRST_REDESIGN_SUMMARY.md  EDITOR_GAME_SEPARATION_SUMMARY.md  EDITOR_SETTINGS_IMPLEMENTATION_SUMMARY.md  ENGINE_WORK_COMPLETION_SUMMARY.md  GALAXY_IMPLEMENTATION_SUMMARY.md  GUI_ACTUAL_STATUS_2025-11-21.md  GUI_IMPLEMENTATION_COMPLETE_SESSION.md  GUI_IMPLEMENTATION_STATUS.md  GUI_INTEGRATION_SUMMARY.md  GUI_REMAINING_TASKS.md  GUI_WIN32HUD_INTEGRATION_NOTE.md  GUI_WORK_COMPLETE_SUMMARY.md  IMGUI_CLEANUP_SESSION_SUMMARY.md  IMGUI_DEPRECATION_NOTICE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INSPECTOR_COMPLETION_SUMMARY.md  PR_SUMMARY.md  (+51 more)
dotnet/: EngineInterop.cs  FreshEngine.Managed.csproj  InputInterop.cs  README.md
examples/: 01_hello_engine.cpp  03_logging_demo.cpp  04_create_world.cpp  05_terrain_generation.cpp  07_player_movement.cpp  10_editor_integration.cpp  11_terraforming.cpp  DEMO_SHOWCASE.md  DIRECTX11_DEMO_README.md  GAMEPLAY_SCENARIOS.md  PROJECT_RESTRUCTURE_SUMMARY.md  README.md  TimeManagerExample.cpp  UNREAL_EDITOR_QUICKSTART.md  asset_management_example.cpp  audio_test.cpp  basic_setup.cpp  camera_system.cpp  character_system_demo.cpp  collision_detection.cpp  creating_asset_pack.cpp  creating_chunks.cpp  custom_structures.cpp  directx11_demo.cpp  hello_fresh.cpp  loading_assets.cpp  logging_example.cpp  player_controller.cpp  raycasting.cpp  terraforming_tools.cpp  terrain_generation.cpp  texture_loading_example.cpp  voxel_interaction.cpp
plugins/: README.md
scripts/: example_gameplay.lua
shaders/: crosshair.frag  voxel.frag  voxel.hlsl  voxel.vert
sounds/: .gitignore  README.md
src/: main.cpp
test_build/: compile_commands.json
tests/: README.md  test_main.cpp
textures/: README.md  USAGE.md  texture_config.json
tools/: README.md  build_verifier.py  generate_test_sounds.py  texture_atlas_generator.py  validate_vcpkg_baseline.sh  world_analyzer.py
upload/: issues.txt
(+435 files in other folders)
